# basecmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: hosted-pure-workflow.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testmain.cpp
